[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/gldsrcBSP/player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/gldsrcBSP/player/Crosshair.gd" type="Script" id=3]
[ext_resource path="res://addons/gldsrcBSP/player/debug/CanvasLayer.tscn" type="PackedScene" id=4]

[sub_resource type="CylinderShape" id=1]
height = 2.65987

[node name="KinematicBody" type="KinematicBody" groups=[
"hlTrigger",
"player",
]]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.87452, 0 )
far = 8192.0

[node name="CanvasLayer" parent="Camera" instance=ExtResource( 4 )]

[node name="UI" type="Control" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Node2D" parent="Camera/UI"]
position = Vector2( 512, 300 )
script = ExtResource( 3 )
color = Color( 0.92549, 0.203922, 0.0352941, 1 )

[node name="right" type="Line2D" parent="Camera/UI/Crosshair"]
points = PoolVector2Array( 5, 0, 10, 0 )
width = 1.0
default_color = Color( 0.92549, 0.203922, 0.0352941, 1 )

[node name="left" type="Line2D" parent="Camera/UI/Crosshair"]
points = PoolVector2Array( -5, 0, -10, 0 )
width = 1.0
default_color = Color( 0.92549, 0.203922, 0.0352941, 1 )

[node name="up" type="Line2D" parent="Camera/UI/Crosshair"]
points = PoolVector2Array( 0, -10, 0, -5 )
width = 1.0
default_color = Color( 0.92549, 0.203922, 0.0352941, 1 )

[node name="down" type="Line2D" parent="Camera/UI/Crosshair"]
position = Vector2( 0.105103, 0 )
points = PoolVector2Array( 0, 10, 0, 5 )
width = 1.0
default_color = Color( 0.92549, 0.203922, 0.0352941, 1 )
round_precision = 14

[node name="shootCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33035, 0 )
shape = SubResource( 1 )

[node name="footCast" type="RayCast" parent="." groups=[
"hlTrigger",
"player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.013726, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.001, 0 )

[node name="footstepSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.0
